--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: Risc-lt/waka-readme-stats@master
+      - uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${{ waka_b064cb2b-a88f-4579-b1f4-997bc4c37cd0 }}
-          GH_TOKEN: ${{ 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 }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
