--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,4 @@ jobs:
           SHOW_OS: "False"
           SHOW_EDITORS: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_LOC_CHART: "False"
